# Auto-Linux

./: .gitignore  Cargo.toml  LICENSE  README.md  VERSION  go.mod  go.sum  install.sh
.github/workflows/: build.yml  release.yml  unit-test.yml
cmd/autolinux/: main.go
installation/: build.sh  install.sh
internal/core/: device.go  distro.go  install.go
internal/types/: types.go
internal/ui/: app.go
src/: main.rs  types.rs  ui.rs
src/core/: device.rs  distro.rs  install.rs  logger.rs  mod.rs
src/core/distro/: alpine.rs  arch.rs  debian.rs  fedora.rs  kali.rs  mod.rs  ubuntu.rs  void.rs
